--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,7 +1,13 @@
 .header {
-    grid-area: header;
-    background-color: aqua;
-  }
-  .header img {
-    width: 40px;
-  }
+  grid-area: header;
+  background: rgb(189, 201, 255);
+  background: linear-gradient(
+    0deg,
+    rgba(189, 201, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  border-radius: 20px;
+}
+.header img {
+  width: 40px;
+}
