--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,9 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+.app-wrapper-content {
+  grid-area: content;
+  background-color: rgba(241, 230, 207, 0.144);
+  border-radius: 20px;
+}
