--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,5 +1,8 @@
 .nav {
     grid-area: nav;
-    background-color: bisque;
+    background: rgb(0,0,0);
+    background: linear-gradient(4deg, rgba(0,0,0,1) 0%, rgba(189, 201, 255, 1) 100%);
     border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+
   }
