--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,8 +1,28 @@
 .nav {
-    grid-area: nav;
-    background: rgb(0,0,0);
-    background: linear-gradient(4deg, rgba(0,0,0,1) 0%, rgba(189, 201, 255, 1) 100%);
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  grid-area: nav;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    4deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(189, 201, 255, 1) 100%
+  );
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 
-  }
+.item {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.item a {
+  color: white;
+  text-decoration: none;
+}
+
+.item a.activeLink {
+  display: block;
+  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  border-radius: 20px;
+  padding: 5px;
+}
