--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,10 +11,8 @@
 }
 
 
-.dialogsItems .dialog{
-}
-
 .dialogsItems .active{
+  font-size: 20px;
   box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
   border-radius: 10px;
 
