--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     "header header header"
     "nav content content";
   grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 250px 10fr;
   grid-gap: 10px;
 
   max-width: 1200px;
