--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -6,6 +6,7 @@
     rgba(0, 0, 0, 1) 0%,
     rgba(189, 201, 255, 1) 100%
   );
+  min-height: 1000px;
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -25,4 +26,21 @@
   box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
   border-radius: 20px;
   padding: 5px;
+}
+
+.friends{
+  color: white;
+  text-align: center;
+ margin-top: 100px;
+  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+
+  
+}
+
+.blockFriends{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  justify-items: center;
+  
 }
