--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -28,19 +28,17 @@
   padding: 5px;
 }
 
-.friends{
+.friends {
   color: white;
   text-align: center;
- margin-top: 100px;
+  margin-top: 100px;
   box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
-
-  
+  border-radius: 10px;
 }
 
-.blockFriends{
+.blockFriends {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   justify-items: center;
-  
 }
