--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -19,7 +19,8 @@
 
 .item a.activeLink {
   display: block;
-  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  background-color: #a0a9ba;
+  box-shadow: inset 0 0 5px 1px;
   border-radius: 20px;
   padding: 5px;
 }
@@ -28,7 +29,7 @@
   color: white;
   text-align: center;
   margin-top: 100px;
-  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 
