--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -13,22 +13,24 @@
 }
 
 .item a {
+  display: block;
   color: white;
   text-decoration: none;
+  margin: 0 15px 0 15px;
+  padding: 10px;
 }
 
 .item a.activeLink {
-  display: block;
-  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  background-color: #a0a9ba;
+  box-shadow: inset 0 0 5px 1px;
   border-radius: 20px;
-  padding: 5px;
 }
 
 .friends {
   color: white;
   text-align: center;
   margin-top: 100px;
-  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 
