--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -8,27 +8,29 @@
 }
 
 .item {
+
   text-align: center;
   margin-top: 20px;
 }
 
 .item a {
+  display: block;
+margin: 10px;
+  padding: 10px;
   color: white;
   text-decoration: none;
 }
 
 .item a.activeLink {
-  display: block;
-  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  box-shadow: inset 0 0 20px 1px rgba(65, 81, 107, 0.5);
   border-radius: 20px;
-  padding: 5px;
 }
 
 .friends {
   color: white;
   text-align: center;
   margin-top: 100px;
-  box-shadow: inset 0px 0px 5px 1px rgb(0 0 0 / 55%);
+  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 
