--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -22,8 +22,10 @@ margin: 10px;
 }
 
 .item a.activeLink {
-  box-shadow: inset 0 0 20px 1px rgba(65, 81, 107, 0.5);
-  border-radius: 20px;
+  font-size: 18px;
+  background-color: rgba(111, 123, 149, 0.25);
+  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .friends {
