--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,44 +1,48 @@
 .nav {
-  grid-area: nav;
-  background: rgb(0, 0, 0);
-  background: linear-gradient(4deg, #3f4e6a 0%, #bebebe 100%);
-  min-height: 1000px;
-  border-radius: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    grid-area: nav;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(4deg, #3f4e6a 0%, #bebebe 100%);
+    min-height: 1000px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .item {
 
-  text-align: center;
-  margin-top: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 .item a {
-  display: block;
-margin: 10px;
-  padding: 10px;
-  color: white;
-  text-decoration: none;
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
 }
 
 .item a.activeLink {
-  font-size: 18px;
-  background-color: rgba(111, 123, 149, 0.25);
-  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
-  border-radius: 15px;
+    font-size: 20px;
+    color: #232a3b;
+    background-color: rgba(120, 134, 172, 0.25);
+    box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
+
+
+
 .friends {
-  color: white;
-  text-align: center;
-  margin-top: 100px;
-  box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+    color: white;
+    text-align: center;
+    margin-top: 100px;
+    box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
 }
 
 .blockFriends {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    justify-items: center;
 }
